# cxx-config

./: CMakeLists.txt  CXXConfig.h  IConfig.cpp  IConfig.h  ITree.h  README.md
.github/workflows/: codeql.yml  linux-build.yml  window_build.yml
src/: CXXConfig.h  CXXConfigExport.h  ITree.h
src/CXXConfigExport/: CMakeLists.txt  CXXConfigExport.cpp
test/: CMakeLists.txt  setget.cpp
