
FIND_PACKAGE(GTest REQUIRED)
IF(GTEST_FOUND)
	MESSAGE(STATUS "Gtest found: ${GTEST_BOTH_LIBRARIES}")
ELSE()
	MESSAGE(ERROR "Gtest is required in order to compile and run the tests")
ENDIF()

# Source files.
FILE(GLOB CXX_CONFIG_SOURCE_FILES 	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB CXX_CONFIG_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(cxxconfig-assert ${CXX_CONFIG_SOURCE_FILES} ${CXX_CONFIG_HEADER_FILES})
TARGET_LINK_LIBRARIES(cxxconfig-assert ${GTEST_LIBRARIES} ${GTEST_MAIN_LIBRARIES} cxx-config pthread )
TARGET_INCLUDE_DIRECTORIES(cxxconfig-assert PRIVATE ${GTEST_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR} )

ADD_TEST(NAME cxxconfig-functionality
		COMMAND cxxconfig-assert
		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
