# Find and include libxml2 for supporting configuration.
FIND_PACKAGE(LibXml2)
IF ( LIBXML2_FOUND )
	MESSAGE(STATUS "Using xml2 version ${LIBXML2_VERSION_STRING}.")
ELSE()
ENDIF()

FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_LIBRARY(cxx-config-export-import ${SOURCE_FILES} ${HEADER_FILES})
TARGET_INCLUDE_DIRECTORIES(cxx-config-export-import PRIVATE ${JSONC_INCLUDE_DIRS} ${LIBXML2_INCLUDE_DIR}
										PUBLIC
											$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
											$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
											$<INSTALL_INTERFACE:>)

#        LIBXML2_DEFINITIONS                                

IF (BUILD_SHARED_LIBS AND CMAKE_SIZEOF_VOID_P EQUAL 8)
	SET_PROPERTY(TARGET cxx-config-export-import PROPERTY POSITION_INDEPENDENT_CODE ON)
ENDIF()

TARGET_LINK_LIBRARIES(cxx-config-export-import PUBLIC cxx-config yaml ${LIBXML2_LIBRARIES} )